# opengl_tutorial

./: CMakeLists.txt
dependencies/glad/: glad.h
src/: glad.c  main.cpp
